// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component Testing The Class Component should register and contain the account name on initialization 1`] = `
<div
  onClick={[Function]}
>
  <div>
    Josh
  </div>
  <div>
    State
  </div>
  <div
    onClick={[Function]}
  />
  <div>
    State
  </div>
  <div>
    Josh
  </div>
  <div
    onClick={[Function]}
  >
    Josh
  </div>
  <div
    onClick={[Function]}
  >
    Josh
  </div>
  <div
    onClick={[Function]}
  >
    Josh
  </div>
  <div
    onClick={[Function]}
  >
    Small Description
  </div>
  <div
    onClick={[Function]}
  >
    Small Description
  </div>
  <div />
</div>
`;

exports[`Component Testing The Class Component should register and contain the address street on initialization using an alias 1`] = `
<div
  onClick={[Function]}
>
  <div>
    Josh
  </div>
  <div>
    State
  </div>
  <div
    onClick={[Function]}
  />
  <div>
    State
  </div>
  <div>
    Josh
  </div>
  <div
    onClick={[Function]}
  >
    Josh
  </div>
  <div
    onClick={[Function]}
  >
    Josh
  </div>
  <div
    onClick={[Function]}
  >
    Josh
  </div>
  <div
    onClick={[Function]}
  >
    Small Description
  </div>
  <div
    onClick={[Function]}
  >
    Small Description
  </div>
  <div />
</div>
`;

exports[`Component Testing The Class Component should register and contain the phone number on initialization 1`] = `
<div>
  <div>
    1234567890
  </div>
</div>
`;

exports[`Component Testing The Functional Component should be registered through the high order function 1`] = `
<div>
  Dev mode: true
</div>
`;
